# stm32f467-rust

./: Cargo.toml  Embed.toml  memory.x  startup.s  stm32f467.ld
.cargo/: config.toml
src/: main.rs  sdram.rs
