[package]
name = "stm32f467"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32f746ng", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "icmp"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"

static_cell = "2"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = "1.0.0"
heapless = "0.9.3"
rand_core = "0.10.1"
#rust-mqtt = { version = "0.5.1", default-features = false }
stm32-fmc = { version = "0.4.0" }
embassy-futures = "0.1.2"


[profile.release]
debug = 2
