[package]
name = "stm32f467"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "stm32f746ng", "memory-x", "unstable-pac", "time-driver-any", "exti"]  }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-net = { version = "0.9.1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "icmp"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"

static_cell = "2"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }

heapless = "0.9.3"

rust-mqtt = { version = "0.5.1", default-features = false, features = ["v5", "bump"] }
stm32-fmc = { version = "0.4.0" }
embassy-futures = "0.1.2"

p256 = { version = "0.14.0-rc.9", default-features = false, features = ["ecdsa", "arithmetic"] }
pem-rfc7468 = { version = "1.0.0", default-features = false }
der = {version = "0.8.0", default-features = false, features = ["heapless"]}

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-nal-async = "0.9.0"

embedded-tls = { version = "0.18.0", default-features = false, features = ["rustpki"] }
embedded-io = {version = "0.7.1", default-features = false, features = ["defmt"]}
embedded-io-async = {version = "0.7.0", features = ["defmt"]}
embedded-io-adapters = {version = "0.7.0", default-features = false, features = []}

sntpc = {version = "0.9.0", default-features = false, features = ["defmt"]}
#embedded-nal-async = "0.9.0"


[profile.release]
debug = 2
